tests/src/snapshots/pluma_tests__parse_success__binary_op_greater_than.snap
---
source: tests/src/parse_success.rs
expression: "\"a\" > \"b\""
---

=== Source ===
"a" > "b"

=== Tokens ===
[
    StringLiteral(
        1,
        2,
    ),
    RightAngle(
        4,
        5,
    ),
    StringLiteral(
        7,
        8,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        8,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                8,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        8,
                    ),
                    kind: BinaryOperation {
                        left: ExprNode {
                            pos: (
                                1,
                                2,
                            ),
                            kind: Literal(
                                LiteralNode {
                                    pos: (
                                        1,
                                        2,
                                    ),
                                    kind: Str(
                                        "a",
                                    ),
                                    typ: None,
                                },
                            ),
                            typ: None,
                        },
                        op: OperatorNode {
                            pos: (
                                4,
                                5,
                            ),
                            name: ">",
                        },
                        right: ExprNode {
                            pos: (
                                7,
                                8,
                            ),
                            kind: Literal(
                                LiteralNode {
                                    pos: (
                                        7,
                                        8,
                                    ),
                                    kind: Str(
                                        "b",
                                    ),
                                    typ: None,
                                },
                            ),
                            typ: None,
                        },
                    },
                    typ: None,
                },
            ),
        },
    ],
}

