tests/src/snapshots/pluma_tests__parse_success__call_number_arg.snap
---
source: tests/src/parse_success.rs
expression: func 1
---

=== Source ===
func 1

=== Tokens ===
[
    Identifier(
        0,
        4,
    ),
    DecimalDigits(
        5,
        6,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        6,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                6,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        6,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                0,
                                6,
                            ),
                            callee: ExprNode {
                                pos: (
                                    0,
                                    4,
                                ),
                                kind: Identifier(
                                    IdentifierNode {
                                        pos: (
                                            0,
                                            4,
                                        ),
                                        name: "func",
                                    },
                                ),
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        5,
                                        6,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                5,
                                                6,
                                            ),
                                            kind: IntDecimal(
                                                1,
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

